--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 icinga:
-  image: jordan/icinga2 
+  image: elnomade/icinga2-ubuntu
   environment:
    - ICINGA_PASSWORD=YOUR_PASSWORD
    - ICINGAWEB2_PASSWORD=YOUR_PASSWORD
