--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 icinga:
-  image: yungas/yungas_icinga2-ubuntu
+  image: dairyd/icinga2
   environment:
    - ICINGA_PASSWORD=YOUR_PASSWORD
    - ICINGAWEB2_PASSWORD=YOUR_PASSWORD
